--- a/examples/training-demo.ipynb
+++ b/examples/training-demo.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Benchmarking Demo\n",
+    "# Training Demo\n",
     "\n",
-    "This notebook demonstrates the use of the Confidential Benchmarking tool. It requires the [avato Benchmarking API](https://github.com/decentriq/avato-python-client-benchmarking) and its dependencies to be installed.  \n",
+    "This notebook demonstrates the use of the Confidential Training tool. It requires the [avato Training API](https://github.com/decentriq/avato-python-client-training) and its dependencies to be installed.  \n",
     "\n",
-    "Note that in a realistic, non-demo use of the Confidential Benchmarking tool, one admin user and multiple participant users would upload data from different computers. In this workbook, for simplicity, the workflows of the admin user and the two participant users are all shown together.   "
+    "Note that in a realistic, non-demo use of the Confidential Training tool, one admin user and multiple participant users would upload data from different computers. In this workbook, for simplicity, the workflows of the admin user and the two participant users are all shown together.   "
    ]
   },
   {
@@ -20,11 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import pandas as pd\n",
     "import json\n",
     "from avato import Client\n",
     "from avato import Secret\n",
@@ -42,8 +43,8 @@
     "# This is the hash of the code\n",
     "expected_measurement = \"4ff505f350698c78e8b3b49b8e479146ce3896a06cd9e5109dfec8f393f14025\"\n",
     "\n",
-    "backend_host = \"localhost\" # \"avato-staging.westeurope.cloudapp.azure.com\"\n",
-    "backend_port = 3000 # 15005"
+    "backend_host = \"localhost\" \n",
+    "backend_port = 3000 "
    ]
   },
   {
@@ -56,9 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Instance ID: 7cc0d5b9-6ca0-4643-8d96-673d89b2be56\n"
+     ]
+    }
+   ],
    "source": [
     "# Create client.\n",
     "admin_client = Client(\n",
@@ -98,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +155,7 @@
     "configuration = Configuration(\n",
     "    categories_columns=[\"x_1\", \"x_2\", \"x_3\", \"x_4\"],\n",
     "    value_column=\"y\",\n",
-    "    ***REMOVED***=\"***REMOVED***\" # the ***REMOVED*** to execute\n",
+    "    ***REMOVED***=admin_***REMOVED*** # the ***REMOVED*** to execute\n",
     ")\n",
     "\n",
     "# Create and set public-private keypair for secure communication.\n",
@@ -166,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,13 +210,13 @@
     "    print(\"Data format:\\n{}\".format(data_format))\n",
     "\n",
     "    # Load data\n",
-    "    with open(data_file, \"rb\") as f:\n",
-    "        data = f.read()\n",
-    "        \n",
-    "    print(\"Loaded data:\\n{}\".format(data.decode(\"utf-8\")))\n",
+    "    df = pd.read_csv(data_file)\n",
+    "    \n",
+    "    print(\"Loaded data:\\n\")\n",
+    "    print(df)\n",
     "\n",
     "    # Submit data\n",
-    "    (ingested_rows, failed_rows) = participant_instance.submit_data(data)\n",
+    "    (ingested_rows, failed_rows) = participant_instance.submit_data(df)\n",
     "    print(\"Number of successfully ingested rows: {}, number of failed rows: {}\".format(ingested_rows, failed_rows))\n",
     "    \n",
     "    return participant_instance"
@@ -222,9 +231,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data format:\n",
+      "categoriesColumns: \"x_1\"\n",
+      "categoriesColumns: \"x_2\"\n",
+      "categoriesColumns: \"x_3\"\n",
+      "categoriesColumns: \"x_4\"\n",
+      "valueColumn: \"y\"\n",
+      "\n",
+      "Loaded data:\n",
+      "\n",
+      "    x_1  x_2  x_3  x_4  y\n",
+      "0   5.1  3.5  1.4  0.2  0\n",
+      "1   4.9  3.0  1.4  0.2  0\n",
+      "2   4.7  3.2  1.3  0.2  0\n",
+      "3   4.6  3.1  1.5  0.2  0\n",
+      "4   5.0  3.6  1.4  0.2  0\n",
+      "..  ...  ...  ...  ... ..\n",
+      "70  5.9  3.2  4.8  1.8  1\n",
+      "71  6.1  2.8  4.0  1.3  1\n",
+      "72  6.3  2.5  4.9  1.5  1\n",
+      "73  6.1  2.8  4.7  1.2  1\n",
+      "74  6.4  2.9  4.3  1.3  1\n",
+      "\n",
+      "[75 rows x 5 columns]\n",
+      "Number of successfully ingested rows: 75, number of failed rows: []\n"
+     ]
+    }
+   ],
    "source": [
     "participant1_instance = participant_submit_data(\n",
     "    participant1_username, \n",
@@ -243,9 +283,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data format:\n",
+      "categoriesColumns: \"x_1\"\n",
+      "categoriesColumns: \"x_2\"\n",
+      "categoriesColumns: \"x_3\"\n",
+      "categoriesColumns: \"x_4\"\n",
+      "valueColumn: \"y\"\n",
+      "\n",
+      "Loaded data:\n",
+      "\n",
+      "    x_1  x_2  x_3  x_4  y\n",
+      "0   6.6  3.0  4.4  1.4  1\n",
+      "1   6.8  2.8  4.8  1.4  1\n",
+      "2   6.7  3.0  5.0  1.7  1\n",
+      "3   6.0  2.9  4.5  1.5  1\n",
+      "4   5.7  2.6  3.5  1.0  1\n",
+      "..  ...  ...  ...  ... ..\n",
+      "70  6.7  3.0  5.2  2.3  2\n",
+      "71  6.3  2.5  5.0  1.9  2\n",
+      "72  6.5  3.0  5.2  2.0  2\n",
+      "73  6.2  3.4  5.4  2.3  2\n",
+      "74  5.9  3.0  5.1  1.8  2\n",
+      "\n",
+      "[75 rows x 5 columns]\n",
+      "Number of successfully ingested rows: 75, number of failed rows: []\n"
+     ]
+    }
+   ],
    "source": [
     "participant2_instance = participant_submit_data(\n",
     "    participant2_username, \n",
@@ -264,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -291,13 +362,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result participant1\n",
+      "{\n",
+      "  \"model 0 - param (0,0)\": 0.9491353034973145,\n",
+      "  \"model 0 - param (0,1)\": 2.4495279788970947,\n",
+      "  \"model 0 - param (0,2)\": -3.6021242141723633,\n",
+      "  \"model 0 - param (0,3)\": -3.77264666557312,\n",
+      "  \"model 1 - param (0,0)\": 0.24731068313121796,\n",
+      "  \"model 1 - param (0,1)\": -1.132555365562439,\n",
+      "  \"model 1 - param (0,2)\": 0.8474775552749634,\n",
+      "  \"model 1 - param (0,3)\": -1.7091010808944702,\n",
+      "  \"model 2 - param (0,0)\": -1.8889198303222656,\n",
+      "  \"model 2 - param (0,1)\": -2.451262950897217,\n",
+      "  \"model 2 - param (0,2)\": 2.4787139892578125,\n",
+      "  \"model 2 - param (0,3)\": 4.074766635894775\n",
+      "}:\n"
+     ]
+    }
+   ],
    "source": [
     "results1 = participant1_instance.get_results()\n",
-    "print(\"Result participant1:\")\n",
-    "print(json.dumps(json.loads(results1.coeffs.replace(\",\\n}\", \"\\n}\")), indent=2))"
+    "print(\"Result participant1\\n{}:\".format(json.dumps(results1, indent=2)))"
    ]
   },
   {
@@ -309,13 +401,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result participant2:\n",
+      "Result participant2\n",
+      "{\n",
+      "  \"model 0 - param (0,0)\": 0.9491353034973145,\n",
+      "  \"model 0 - param (0,1)\": 2.4495279788970947,\n",
+      "  \"model 0 - param (0,2)\": -3.6021242141723633,\n",
+      "  \"model 0 - param (0,3)\": -3.77264666557312,\n",
+      "  \"model 1 - param (0,0)\": 0.24731068313121796,\n",
+      "  \"model 1 - param (0,1)\": -1.132555365562439,\n",
+      "  \"model 1 - param (0,2)\": 0.8474775552749634,\n",
+      "  \"model 1 - param (0,3)\": -1.7091010808944702,\n",
+      "  \"model 2 - param (0,0)\": -1.8889198303222656,\n",
+      "  \"model 2 - param (0,1)\": -2.451262950897217,\n",
+      "  \"model 2 - param (0,2)\": 2.4787139892578125,\n",
+      "  \"model 2 - param (0,3)\": 4.074766635894775\n",
+      "}:\n"
+     ]
+    }
+   ],
    "source": [
     "results2 = participant2_instance.get_results()\n",
     "print(\"Result participant2:\")\n",
-    "print(json.dumps(json.loads(results2.coeffs.replace(\",\\n}\", \"\\n}\")), indent=2))"
+    "print(\"Result participant2\\n{}:\".format(json.dumps(results2, indent=2)))"
    ]
   },
   {
