--- a/examples/training-demo.ipynb
+++ b/examples/training-demo.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Instance ID: 7cc0d5b9-6ca0-4643-8d96-673d89b2be56\n"
+      "Instance ID: 780827e6-9e95-43b3-8188-7e8c25dca62c\n"
      ]
     }
    ],
@@ -362,34 +362,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Result participant1\n",
-      "{\n",
-      "  \"model 0 - param (0,0)\": 0.9491353034973145,\n",
-      "  \"model 0 - param (0,1)\": 2.4495279788970947,\n",
-      "  \"model 0 - param (0,2)\": -3.6021242141723633,\n",
-      "  \"model 0 - param (0,3)\": -3.77264666557312,\n",
-      "  \"model 1 - param (0,0)\": 0.24731068313121796,\n",
-      "  \"model 1 - param (0,1)\": -1.132555365562439,\n",
-      "  \"model 1 - param (0,2)\": 0.8474775552749634,\n",
-      "  \"model 1 - param (0,3)\": -1.7091010808944702,\n",
-      "  \"model 2 - param (0,0)\": -1.8889198303222656,\n",
-      "  \"model 2 - param (0,1)\": -2.451262950897217,\n",
-      "  \"model 2 - param (0,2)\": 2.4787139892578125,\n",
-      "  \"model 2 - param (0,3)\": 4.074766635894775\n",
-      "}:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "results1 = participant1_instance.get_results()\n",
-    "print(\"Result participant1\\n{}:\".format(json.dumps(results1, indent=2)))"
+    "classifier1 = participant1_instance.get_results()"
    ]
   },
   {
@@ -401,36 +378,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Result participant2:\n",
-      "Result participant2\n",
-      "{\n",
-      "  \"model 0 - param (0,0)\": 0.9491353034973145,\n",
-      "  \"model 0 - param (0,1)\": 2.4495279788970947,\n",
-      "  \"model 0 - param (0,2)\": -3.6021242141723633,\n",
-      "  \"model 0 - param (0,3)\": -3.77264666557312,\n",
-      "  \"model 1 - param (0,0)\": 0.24731068313121796,\n",
-      "  \"model 1 - param (0,1)\": -1.132555365562439,\n",
-      "  \"model 1 - param (0,2)\": 0.8474775552749634,\n",
-      "  \"model 1 - param (0,3)\": -1.7091010808944702,\n",
-      "  \"model 2 - param (0,0)\": -1.8889198303222656,\n",
-      "  \"model 2 - param (0,1)\": -2.451262950897217,\n",
-      "  \"model 2 - param (0,2)\": 2.4787139892578125,\n",
-      "  \"model 2 - param (0,3)\": 4.074766635894775\n",
-      "}:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "results2 = participant2_instance.get_results()\n",
-    "print(\"Result participant2:\")\n",
-    "print(\"Result participant2\\n{}:\".format(json.dumps(results2, indent=2)))"
+    "classifier2 = participant2_instance.get_results()"
    ]
   },
   {
@@ -454,6 +406,279 @@
     "admin_instance.delete()\n",
     "assert admin_instance.id not in admin_client.get_instances()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "0.0 0.0 0\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 2\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 2\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 2\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 2\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 2\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 2\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 2\n",
+      "1.0 1.0 2\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 2\n",
+      "1.0 1.0 2\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "1.0 1.0 1\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "2.0 2.0 2\n",
+      "0.9333333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def get_data():\n",
+    "    Xy = np.array(\n",
+    "        pd.concat([\n",
+    "            pd.read_csv(\"./test-data/participant1_data.csv\"),\n",
+    "            pd.read_csv(\"./test-data/participant2_data.csv\")\n",
+    "        ])\n",
+    "    );\n",
+    "    X = Xy[:,0:4]\n",
+    "    y = Xy[:,4]\n",
+    "    return X, y\n",
+    "\n",
+    "X, y = get_data()\n",
+    "y_hat = classifier1.predict(X)\n",
+    "\n",
+    "assert len(y) == len(y_hat)\n",
+    "n = len(y)\n",
+    "n_eq = 0\n",
+    "for yi, yi_hat in zip(y, y_hat):\n",
+    "    print(yi, float(yi), yi_hat)\n",
+    "    if float(yi) == float(yi_hat):\n",
+    "        n_eq = n_eq + 1\n",
+    "print(float(n_eq)/n)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import numpy as npd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from sklearn.utils.estimator_checks import check_estimator\n",
+    "check_estimator(CustomOvrLinearRegressionClassifier())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.base import BaseEstimator, ClassifierMixin\n",
+    "from sklearn.utils.validation import check_X_y, check_array, check_is_fitted\n",
+    "from sklearn.utils.multiclass import unique_labels\n",
+    "from sklearn.metrics import euclidean_distances\n",
+    "class TemplateClassifier(BaseEstimator, ClassifierMixin):\n",
+    "\n",
+    "    def __init__(self, demo_param='demo'):\n",
+    "        self.demo_param = demo_param\n",
+    "\n",
+    "    def fit(self, X, y):\n",
+    "\n",
+    "        # Check that X and y have correct shape\n",
+    "        X, y = check_X_y(X, y)\n",
+    "        # Store the classes seen during fit\n",
+    "        self.classes_ = unique_labels(y)\n",
+    "\n",
+    "        self.X_ = X\n",
+    "        self.y_ = y\n",
+    "        # Return the classifier\n",
+    "        return self\n",
+    "\n",
+    "    def predict(self, X):\n",
+    "\n",
+    "        # Check is fit had been called\n",
+    "        check_is_fitted(self)\n",
+    "\n",
+    "        # Input validation\n",
+    "        X = check_array(X)\n",
+    "\n",
+    "        closest = np.argmin(euclidean_distances(X, self.X_), axis=1)\n",
+    "        return self.y_[closest]\n",
+    "\n",
+    "from sklearn.utils.estimator_checks import check_estimator\n",
+    "check_estimator(TemplateClassifier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
