working with hyperparams & metadata

--- a/examples/training-demo.ipynb
+++ b/examples/training-demo.ipynb
@@ -30,6 +30,7 @@
     "from avato import Client\n",
     "from avato import Secret\n",
     "from avato_training import Training_Instance, Configuration\n",
+    "import numpy as np\n",
     "\n",
     "admin_username = \"***REMOVED***\"\n",
     "admin_***REMOVED*** = \"***REMOVED***\"\n",
@@ -51,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ADMIN USER - Set Up Instance\n",
+    "### ADMIN USER\n",
     "#### Create new instance"
    ]
   },
@@ -64,7 +65,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Instance ID: 780827e6-9e95-43b3-8188-7e8c25dca62c\n"
+      "Instance ID: 45b41f57-98ac-4d01-96f9-fbb2e0db138c\n"
      ]
     }
    ],
@@ -170,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### PARTICIPANT USERS - Submit Data"
+    "### PARTICIPANT USERS"
    ]
   },
   {
@@ -330,7 +331,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ADMIN USER - Start Execution"
+    "### ADMIN USER\n",
+    "#### Start Execution"
    ]
   },
   {
@@ -343,46 +345,101 @@
    },
    "outputs": [],
    "source": [
-    "admin_instance.start_execution(admin_***REMOVED***)"
+    "hyperparameters = {\n",
+    "    \"learning_rate\": 0.75,\n",
+    "    \"num_splits\": 10,\n",
+    "    \"num_epochs\": 5,\n",
+    "    \"l2_penalty\": 0.1,\n",
+    "    \"l1_penalty\": 0.0,\n",
+    "}\n",
+    "\n",
+    "admin_instance.start_execution(admin_***REMOVED***, hyperparameters)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### PARTICIPANT USERS - Get Results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### PARTICIPANT 1 - Get results"
+    "#### Get results, inspect metadata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "metadata: {\n",
+      "  \"CV Test Accuracy\": \"0.8533333\",\n",
+      "  \"CV Train Accuracy\": \"0.85333335\",\n",
+      "  \"Fullset Accuracy\": \"0.96666664\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
-    "classifier1 = participant1_instance.get_results()"
+    "classifier, metadata = admin_instance.get_results(admin_***REMOVED***)\n",
+    "print(\"metadata: {}\".format(json.dumps(metadata, indent=2)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### PARTICIPANT 2 - Get results"
+    "#### Use classifier, compute accuracy on full dataset, compare with metadata results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Some predictions of the classifier: ['0' '0']\n",
+      "Accuracy of the enclave classifier on the full dataset (as returned through the metadata object): 0.96666664\n",
+      "Accuracy of the local classifier on the full dataset: 0.9666666666666667\n"
+     ]
+    }
+   ],
    "source": [
-    "classifier2 = participant2_instance.get_results()"
+    "def load_data():\n",
+    "    Xy = np.array(\n",
+    "        pd.concat([\n",
+    "            pd.read_csv(\"./test-data/participant1_data.csv\"),\n",
+    "            pd.read_csv(\"./test-data/participant2_data.csv\")\n",
+    "        ])\n",
+    "    );\n",
+    "    X = Xy[:,0:4]\n",
+    "    y = Xy[:,4]\n",
+    "    return X, y\n",
+    "\n",
+    "def compute_accuracy(classifier, X, y):\n",
+    "\n",
+    "    y_hat = classifier.predict(X)\n",
+    "    assert len(y) == len(y_hat)\n",
+    "    n = len(y)\n",
+    "    n_eq = 0\n",
+    "    for yi, yi_hat in zip(y, y_hat):\n",
+    "        if float(yi) == float(yi_hat):\n",
+    "            n_eq = n_eq + 1\n",
+    "    accuracy = float(n_eq)/n\n",
+    "    return accuracy\n",
+    "\n",
+    "\n",
+    "X, y = load_data()\n",
+    "accuracy = compute_accuracy(classifier, X, y)\n",
+    "\n",
+    "print(\"Some predictions of the classifier: {}\".format(classifier.predict(X[0:2, :])))\n",
+    "print(\"Accuracy of the enclave classifier on the full dataset (as returned through the metadata object): {}\".format(metadata[\"Fullset Accuracy\"]))\n",
+    "print(\"Accuracy of the local classifier on the full dataset: {}\".format(accuracy))\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -394,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -409,269 +466,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "0.0 0.0 0\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 2\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 2\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 2\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 2\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 2\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 2\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 2\n",
-      "1.0 1.0 2\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 2\n",
-      "1.0 1.0 2\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "1.0 1.0 1\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "2.0 2.0 2\n",
-      "0.9333333333333333\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "def get_data():\n",
-    "    Xy = np.array(\n",
-    "        pd.concat([\n",
-    "            pd.read_csv(\"./test-data/participant1_data.csv\"),\n",
-    "            pd.read_csv(\"./test-data/participant2_data.csv\")\n",
-    "        ])\n",
-    "    );\n",
-    "    X = Xy[:,0:4]\n",
-    "    y = Xy[:,4]\n",
-    "    return X, y\n",
-    "\n",
-    "X, y = get_data()\n",
-    "y_hat = classifier1.predict(X)\n",
-    "\n",
-    "assert len(y) == len(y_hat)\n",
-    "n = len(y)\n",
-    "n_eq = 0\n",
-    "for yi, yi_hat in zip(y, y_hat):\n",
-    "    print(yi, float(yi), yi_hat)\n",
-    "    if float(yi) == float(yi_hat):\n",
-    "        n_eq = n_eq + 1\n",
-    "print(float(n_eq)/n)\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import re\n",
-    "import numpy as npd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "from sklearn.utils.estimator_checks import check_estimator\n",
-    "check_estimator(CustomOvrLinearRegressionClassifier())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from sklearn.base import BaseEstimator, ClassifierMixin\n",
-    "from sklearn.utils.validation import check_X_y, check_array, check_is_fitted\n",
-    "from sklearn.utils.multiclass import unique_labels\n",
-    "from sklearn.metrics import euclidean_distances\n",
-    "class TemplateClassifier(BaseEstimator, ClassifierMixin):\n",
-    "\n",
-    "    def __init__(self, demo_param='demo'):\n",
-    "        self.demo_param = demo_param\n",
-    "\n",
-    "    def fit(self, X, y):\n",
-    "\n",
-    "        # Check that X and y have correct shape\n",
-    "        X, y = check_X_y(X, y)\n",
-    "        # Store the classes seen during fit\n",
-    "        self.classes_ = unique_labels(y)\n",
-    "\n",
-    "        self.X_ = X\n",
-    "        self.y_ = y\n",
-    "        # Return the classifier\n",
-    "        return self\n",
-    "\n",
-    "    def predict(self, X):\n",
-    "\n",
-    "        # Check is fit had been called\n",
-    "        check_is_fitted(self)\n",
-    "\n",
-    "        # Input validation\n",
-    "        X = check_array(X)\n",
-    "\n",
-    "        closest = np.argmin(euclidean_distances(X, self.X_), axis=1)\n",
-    "        return self.y_[closest]\n",
-    "\n",
-    "from sklearn.utils.estimator_checks import check_estimator\n",
-    "check_estimator(TemplateClassifier)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
