split into owner/analyst

--- a/examples/training-demo.ipynb
+++ b/examples/training-demo.ipynb
@@ -44,15 +44,13 @@
     "# This is the hash of the code\n",
     "expected_measurement = \"4ff505f350698c78e8b3b49b8e479146ce3896a06cd9e5109dfec8f393f14025\"\n",
     "\n",
-    "dataowner1_file = \"test-data/simple-dataowner1.csv\"\n",
-    "dataowner2_file = \"test-data/simple-dataowner2.csv\"\n",
-    "feature_columns = [\"x_1\", \"x_2\", \"x_3\", \"x_4\"]\n",
-    "label_column = \"y\"\n",
-    "\n",
-    "dataowner1_file = \"test-data/wine-dataowner1.csv\"\n",
-    "dataowner2_file = \"test-data/wine-dataowner2.csv\"\n",
+    "# How the analyst expects the data to be formatted\n",
     "feature_columns = ['fixed acidity', 'volatile acidity', 'citric acid', 'residual sugar', 'chlorides', 'free sulfur dioxide', 'total sulfur dioxide', 'density', 'pH', 'sulphates', 'alcohol']\n",
     "label_column = \"quality\"\n",
+    "\n",
+    "# The datafiles uploaded by the \n",
+    "dataowner1_file = \"test-data/wine-dataowner1.csv\"\n",
+    "dataowner2_file = \"test-data/wine-dataowner2.csv\"\n",
     "\n",
     "backend_host = \"localhost\" \n",
     "backend_port = 3000 "
@@ -75,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Instance ID: 123cd9fb-f96e-475e-9bbc-d58885dfa72a\n"
+      "Instance ID: ca1b475c-c678-4799-99e7-204742d95c17\n"
      ]
     }
    ],
@@ -164,8 +162,8 @@
    "source": [
     "# Set the configuration\n",
     "configuration = Configuration(\n",
-    "    categories_columns=feature_columns,\n",
-    "    value_column=label_column,\n",
+    "    feature_columns=feature_columns,\n",
+    "    label_column=label_column,\n",
     "    ***REMOVED***=analyst_***REMOVED*** # the ***REMOVED*** to execute\n",
     ")\n",
     "\n",
@@ -413,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -456,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -495,9 +493,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Some predictions of the classifier: ['5' '5']\n",
+      "Accuracy of the enclave classifier on the full dataset (as returned through the metadata object): 0.5097999\n",
+      "Accuracy of the local classifier on the full dataset: 0.5097999183340138\n"
+     ]
+    }
+   ],
    "source": [
     "def load_data():\n",
     "    Xy = np.array(\n",
@@ -542,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -553,31 +561,6 @@
     "analyst_instance.shutdown()\n",
     "analyst_instance.delete()\n",
     "assert analyst_instance.id not in analyst_client.get_instances()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.getcwd()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"./test-data/winequality-white.csv\", sep=\";\")\n",
-    "np.random.seed(0)\n",
-    "msk = np.random.rand(len(df)) < 0.5\n",
-    "df1 = df[msk]\n",
-    "df2 = df[~msk]\n",
-    "df1.to_csv(\"test-data/wine-dataowner1.csv\", index=False)\n",
-    "df2.to_csv(\"test-data/wine-dataowner2.csv\", index=False)\n",
-    "df.columns"
    ]
   },
   {
