--- a/examples/training-demo-dataowners.ipynb
+++ b/examples/training-demo-dataowners.ipynb
@@ -6,16 +6,16 @@
    "source": [
     "# Confidential ML Training Demo (Dataowners Part)\n",
     "\n",
-    "This notebook is the Dataowners part of the *Confidential ML Training Demo* showing how a simple logistic regression classifier can be trained while keeping the training data provably confidential. The demo requires the [Training Client API](https://github.com/decentriq/avato-python-client-training) and its dependencies to be installed.  \n",
+    "This notebook is the Data Owners part of the *Confidential ML Training Demo* showing how a simple logistic regression classifier can be trained while keeping the training data provably confidential. The demo requires the [Training Client API](https://github.com/decentriq/avato-python-client-training) and its dependencies to be installed.  \n",
     "\n",
-    "Note that in a realistic, non-demo use of the Confidential Training tool, one analyst user and multiple dataowner users would upload data from different computers. In this demo, for simplicity, both dataowners submit data from the same notebook."
+    "Note that in a realistic, non-demo use of the Confidential Training tool, one analyst user and multiple data owners would upload data from different computers. In this demo, for simplicity, both data owners submit data from the same notebook."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1 - Import dependencies"
+    "## 1 - Import dependencies and submission code"
    ]
   },
   {
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This function submits for a given dataowner a data file to the instance.\n",
+    "# This function submits for a given data owner a data file to the instance.\n",
     "def dataowner_submit_data(dataowner_username, dataowner_***REMOVED***, instance_id, data_file):\n",
     "\n",
     "    # Create client\n",
