made demo simpler

--- a/examples/training-demo-analyst.ipynb
+++ b/examples/training-demo-analyst.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Confidential ML Training Demo (Analyst Part)\n",
+    "# Confidential ML Training Demo (Analyst)\n",
     "\n",
     "This notebook is the Analyst part of the *Confidential ML Training Demo* showing how a simple logistic regression classifier can be trained while keeping the training data provably confidential. The demo requires the [Training Client API](https://github.com/decentriq/avato-python-client-training) and its dependencies to be installed.  \n",
     "\n",
@@ -30,7 +30,6 @@
     "from avato import Secret\n",
     "from avato_training import Training_Instance, Configuration\n",
     "import numpy as np\n",
-    "\n",
     "import example\n",
     "\n",
     "analyst_username, analyst_***REMOVED*** = example.analyst_credentials\n",
@@ -68,7 +67,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Instance ID: 95921473-6649-4a7d-92df-8e76a96903f5\n"
+      "Instance ID: 651a23f6-0233-41f3-b13a-fb216b1f11b8\n"
      ]
     }
    ],
@@ -161,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -173,9 +172,9 @@
      "output_type": "stream",
      "text": [
       "metadata: {\n",
-      "  \"CV Test Accuracy\": \"0.4860941\",\n",
-      "  \"CV Train Accuracy\": \"0.48822862\",\n",
-      "  \"Fullset Accuracy\": \"0.48591262\"\n",
+      "  \"CV Test Accuracy\": \"0.4848671\",\n",
+      "  \"CV Train Accuracy\": \"0.49172148\",\n",
+      "  \"Fullset Accuracy\": \"0.48877093\"\n",
       "}\n"
      ]
     }
@@ -204,21 +203,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "metadata: {\n",
-      "  \"CV Test Accuracy\": \"0.47443762\",\n",
-      "  \"CV Train Accuracy\": \"0.47695622\",\n",
-      "  \"Fullset Accuracy\": \"0.48040017\"\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "hyperparameters = {\n",
     "    \"learning_rate\": 1.0,\n",
@@ -244,19 +231,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Some predictions of the classifier: ['6' '6']\n",
-      "Accuracy of the enclave classifier on the full dataset (as returned through the metadata object): 0.48040017\n",
-      "Accuracy of the local classifier on the full dataset: 0.4804001633319722\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X, y = example.load_data()\n",
     "accuracy = example.compute_accuracy(classifier, X, y)\n",
@@ -275,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
